<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_general_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smartposter"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Welcome"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
            android:id="@+id/logout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_general_margin"
            android:background="@android:color/white"
            android:padding="@dimen/activity_general_margin"
            android:text="@string/logout"
            android:textColor="@color/blue_text" />

    <Button
        android:id="@+id/scanNfc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_general_margin"
        android:background="@android:color/white"
        android:padding="@dimen/activity_general_margin"
        android:text="@string/Scan"
        android:textColor="@color/blue_text" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPosters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>